# processinator

./: .gitignore  README.md  factorial.py  pyproject.toml
logs/: chat.json  notification.json  stop.json
scripts/: benchmark.py
src/processinator/: __init__.py  autocrop.py  gradient.py  pipeline.py
src/processinator/stretching/: __init__.py  algorithms.py  backend.py  fits_io.py
tests/: test_stretch.py
