[project]
name = "processinator"
version = "0.4.0"
description = "Astronomy image processing library"
readme = "README.md"
authors = [
    { name = "Steven", email = "erewhon@flatland.org" }
]
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0",
    "jax[cpu]>=0.4",
    "numpy>=1.26",
    "pillow>=11.0",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.4",
]
rocm = [
    "jax>=0.4",
]
metal = [
    "jax-metal>=0.1",
    "jax>=0.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
